--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,54 @@
-h1 {
-    padding-top: 4em;
+html { 
+
+}
+body {
+	background: url(../img/bground.png) no-repeat center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+
+	
+}
+
+
+header {
+	color: #0000FF;
+	font-size: 46px;
+	text-align: center;
+	height: 150px;
+	
+}
+
+footer {
+	color: #FFFFFF;
+	text-align: center;
+	bottom: 100px;
+	position: absolute;
+	width: 1000px;
+}
+
+aside {
+	direction: rtl;
+}
+
+div.wrapper {
+	
+	width: 1000px;
+	margin :0px auto;
+}
+
+div.container {
+	
+	margin: 0px auto;
+
+	
+}
+
+article.content{
+	font-size: 18px;
+	padding: 20px;
+	text-align: center;
+	text-shadow: 2px 2px #b6b6b6;
+	font-weight:bold;
 }
