Button to change text color added

--- a/css/custom.css
+++ b/css/custom.css
@@ -13,6 +13,7 @@ body {
 
 
 header {
+	padding-top: 2em;
 	color: #0000FF;
 	font-size: 46px;
 	text-align: center;
@@ -41,14 +42,27 @@ div.wrapper {
 div.container {
 	
 	margin: 0px auto;
+	text-align: center;
 
 	
 }
 
-article.content{
+div.content{
 	font-size: 18px;
 	padding: 20px;
 	text-align: center;
 	text-shadow: 2px 2px #b6b6b6;
 	font-weight:bold;
+}
+
+button.blueColorbtn {
+	color: blue;
+}
+
+button.redColorbtn {
+	color: red;
+}
+
+button.blackColorbtn {
+	color: black;
 }
