--- a/css/custom.css
+++ b/css/custom.css
@@ -1,68 +1,55 @@
-html { 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+header,section,nav,aside,footer {
+    display:block;
+    height: 40%;
 
 }
+
 body {
-	background: url(../img/bground.png) no-repeat center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+	text-align: center;
 
-	
 }
 
+header,footer {
+	position: absolute;
+	display: none;
+	font-size: 32px;
+	margin-top: 40px;
+}
 
 header {
-	padding-top: 2em;
-	color: #0000FF;
-	font-size: 46px;
-	text-align: center;
-	height: 150px;
-	
+	left: 35%;	
 }
 
 footer {
-	color: #FFFFFF;
-	text-align: center;
-	bottom: 100px;
-	position: absolute;
-	width: 1000px;
+	left: 15%;
 }
+/*= Index-Canvas
+ ============================================================= */
 
-aside {
-	direction: rtl;
-}
-
-div.wrapper {
+#canvas{
 	
-	width: 1000px;
-	margin :0px auto;
+    background: white;
+}
+				
+#canvas_container{
+	margin: 0 auto;  
+    padding:5px;   
+    position: relative; 
+    z-index: -1;
 }
 
-div.container {
-	
-	margin: 0px auto;
-	text-align: center;
-
+.wrapper {
+	margin: 0 auto;
 	
 }
 
-div.content{
-	font-size: 18px;
-	padding: 20px;
-	text-align: center;
-	text-shadow: 2px 2px #b6b6b6;
-	font-weight:bold;
-}
 
-button.blueColorbtn {
-	color: blue;
-}
 
-button.redColorbtn {
-	color: red;
-}
 
-button.blackColorbtn {
-	color: black;
-}
+				
+                
